[package]
name = "lfs"
version = "0.1.0"
authors = ["sourcepirate <sathyanarrayanan@yandex.com>"]
edition = "2018"

[dependencies]
libc = "0.2.49"
time = "0.1.42"
env_logger = "0.6.0"
log = "0.4.6"
jsonrpc-core = "10.1.0"
jsonrpc-derive = "10.1.0"
serde = "1.0.88"
serde_derive = "1.0.88"
docopt = "1.0.2"
brotli = "3.3.0"