[package]
name = "lfs"
version = "0.1.0"
authors = ["sourcepirate <sathyanarrayanan@yandex.com>"]
edition = "2018"

[dependencies]
libc = "0.2.50"
time = "0.1.42"
env_logger = "0.6.1"
log = "0.4.6"
jsonrpc-core = "10.1.0"
jsonrpc-derive = "10.1.0"
serde = "1.0.89"
serde_derive = "1.0.89"
docopt = "1.0.2"
brotli = "3.3.0"
adler32 = "1.0.3"
md5 = "0.6.1"